@@ -220,13 +220,15 @@ static gint get_temperature(thermal *th, gint *warn)
     for(i = 0; i < th->numsensors; i++){
         cur = th->get_temperature[i](th->sensor_array[i]);
         if (w == 2) ; /* already warning2 */
-        else if (th->critical[i] > 0 && cur >= th->critical[i] - 5)
+        else if (th->not_custom_levels &&
+                 th->critical[i] > 0 && cur >= th->critical[i] - 5)
             w = 2;
         else if ((!th->not_custom_levels || th->critical[i] < 0) &&
                  cur >= th->warning2)
             w = 2;
         else if (w == 1) ; /* already warning1 */
-        else if (th->critical[i] > 0 && cur >= th->critical[i] - 10)
+        else if (th->not_custom_levels &&
+                 th->critical[i] > 0 && cur >= th->critical[i] - 10)
             w = 1;
         else if ((!th->not_custom_levels || th->critical[i] < 0) &&
                  cur >= th->warning1)
